<resources>
    <string name="app_name">云课堂</string>
    <string name="danmu">弹幕</string>

    <!-- 登录 -->
    <string name="login">登录</string>
    <string name="login_head_info">POLYV&#160;&#160;云课堂</string>
    <string name="login_userId">用户ID</string>
    <string name="login_vid">视频ID</string>
    <string name="login_channelId">频道ID</string>
    <string name="login_appId">APP ID</string>
    <string name="login_appSecert">APP Secert</string>
    <string name="login_waiting">正在登录中，请稍等...</string>
    <string name="login_copyright">2013 - 2019 广州易方信息科技股份有限公司 版权所有</string>

    <!-- 聊天室 -->
    <string name="chat_tab_live_info_text_default">直播介绍</string>
    <string name="chat_tab_custom_menu_text_default">自定义菜单</string>
    <string name="chat_tab_iframe_menu_text_default">推广外链</string>
    <string name="chat_tab_tuwen_menu_text_default">图文直播</string>
    <string name="chat_tab_group_chat_text_default">聊天</string>
    <string name="chat_tab_personal_chat_text_default">提问</string>
    <string name="chat_tab_previous_text_default">往期</string>

</resources>
