<?xml version="1.0" encoding="utf-8"?>

<com.easefun.polyv.commonui.player.widget.PolyvSoftView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/polyv_soft_listener_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dm_60"
            android:src="@drawable/logo_polyv" />

        <TextView
            android:id="@+id/login_logo_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login_head_info"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dm_30">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/live_top_select"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dm_42"
                android:layout_below="@id/player_container"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/live_group_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/tv_group_live"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginBottom="3dp"
                        android:text="直播"
                        android:textColor="@drawable/polyv_color_topic_tab_text_selector"
                        android:textSize="16sp" />

                    <View
                        android:layout_width="32dp"
                        android:layout_height="3dp"
                        android:layout_below="@id/tv_group_live"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/polyv_color_topic_tab_bottom_selector" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/playback_group_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/tv_personal_playback"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginBottom="3dp"
                        android:gravity="center"
                        android:text="回放"
                        android:textColor="@drawable/polyv_color_topic_tab_text_selector"
                        android:textSize="16sp" />

                    <View
                        android:layout_width="32dp"
                        android:layout_height="3dp"
                        android:layout_below="@id/tv_personal_playback"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/polyv_color_topic_tab_bottom_selector" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/live_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dm_20"
                android:layout_marginRight="@dimen/dm_20"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/user_id"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dm_42"
                    android:layout_margin="@dimen/dm_10"
                    android:gravity="center_vertical"
                    android:hint="@string/login_userId"
                    android:textColorHint="@color/place_holder_color"
                    android:textCursorDrawable="@null"
                    android:textSize="16sp"
                    />

                <EditText
                    android:id="@+id/channel_id"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dm_42"
                    android:layout_margin="@dimen/dm_10"
                    android:hint="@string/login_channelId"
                    android:textColorHint="@color/place_holder_color"
                    android:textCursorDrawable="@null"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/app_id"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dm_42"
                    android:layout_margin="@dimen/dm_10"
                    android:hint="@string/login_appId"
                    android:textColorHint="@color/place_holder_color"
                    android:textCursorDrawable="@null"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/app_secert"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dm_42"
                    android:layout_margin="@dimen/dm_10"
                    android:hint="@string/login_appSecert"
                    android:textColorHint="@color/place_holder_color"
                    android:textCursorDrawable="@null"
                    android:textSize="16sp"
                     />


            </LinearLayout>

            <include layout="@layout/polyv_playback_login_layout" />

            <TextView
                android:id="@+id/login"
                android:layout_width="@dimen/dm_307"
                android:layout_height="@dimen/dm_48"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dm_30"
                android:background="@drawable/polyv_login_selector"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@drawable/polyv_login_text_selector"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/dm_30"
        android:layout_marginTop="@dimen/dm_10"
        android:gravity="bottom"
        android:text="@string/login_copyright" />

</com.easefun.polyv.commonui.player.widget.PolyvSoftView>
